ui: refine spacing, navigation offsets, and sidebar active state

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
               <span class="card-index-sm accent-text">[05]</span>
               <h4>MLP Mining</h4>
               <p class="card-desc-sm">Corporate Profile operations.</p>
-              <div class="tag-group" style="margin-top: 0.75rem">
+              <div class="tag-group">
                 <span class="tech-tag">WORDPRESS</span>
               </div>
             </div>
@@ -198,7 +198,7 @@
               <span class="card-index-sm accent-text">[06]</span>
               <h4>KES Mining</h4>
               <p class="card-desc-sm">Safety Standards portfolio.</p>
-              <div class="tag-group" style="margin-top: 0.75rem">
+              <div class="tag-group">
                 <span class="tech-tag">WORDPRESS</span>
               </div>
             </div>
@@ -212,7 +212,7 @@
               <span class="card-index-sm accent-text">[07]</span>
               <h4>Safa Victory Steel</h4>
               <p class="card-desc-sm">Industrial Product Catalog.</p>
-              <div class="tag-group" style="margin-top: 0.75rem">
+              <div class="tag-group">
                 <span class="tech-tag">WORDPRESS</span>
               </div>
             </div>
