fix: sidebar active state now follows scroll and click accurately

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </section>
 
       <!-- PROJECTS SYMMETRICAL GRID -->
-      <section id="projects" class="projects-section">
+      <section id="projects" class="projects-section animate-in">
         <h2 class="animate-in section-title">CORE_CASE_STUDIES</h2>
         <div class="project-grid">
           <!-- ROW 1 -->
