docs: Update project descriptions and shorten one project title in the portfolio.

--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
               <span class="card-index accent-text">[01]</span>
               <h3>Asset Management System</h3>
               <p class="card-desc">
-                Enterprise-grade internal asset inventory and tracking system
-                integrated with corporate security.
+                Enterprise asset inventory and lifecycle tracking system with role-based access control and secure Microsoft SSO integration.
               </p>
               <div class="tag-group">
                 <span class="tech-tag">LARAVEL</span>
@@ -122,8 +121,7 @@
               <span class="card-index accent-text">[02]</span>
               <h3>Travel Management System</h3>
               <p class="card-desc">
-                Digital workflow for business travel requests, approvals, and
-                expense tracking.
+                Centralized business travel management platform covering multi-trip requests, approvals, cost calculation, and automated notifications.
               </p>
               <div class="tag-group">
                 <span class="tech-tag">LARAVEL</span>
@@ -141,10 +139,9 @@
             </div>
             <div>
               <span class="card-index accent-text">[03]</span>
-              <h3>Sipawas HSE</h3>
+              <h3>Sipawas</h3>
               <p class="card-desc">
-                Integrated Workplace Safety Monitoring System for real-time
-                reporting and compliance auditing.
+                Digital HSE monitoring system enabling real-time safety inspections, incident reporting, and compliance oversight.
               </p>
               <div class="tag-group">
                 <span class="tech-tag">LARAVEL</span>
@@ -164,8 +161,7 @@
               <span class="card-index accent-text">[04]</span>
               <h3>CV Screener System</h3>
               <p class="card-desc">
-                AI-assisted recruitment tool that extracts candidate data using
-                high-speed OCR technology.
+                Automated CV screening tool leveraging OCR to extract, parse, and score candidate data efficiently.
               </p>
               <div class="tag-group">
                 <span class="tech-tag">JAVASCRIPT</span>
@@ -183,7 +179,7 @@
             <div>
               <span class="card-index-sm accent-text">[05]</span>
               <h4>MLP Mining</h4>
-              <p class="card-desc-sm">Corporate Profile operations.</p>
+              <p class="card-desc-sm">Corporate company profile.</p>
               <div class="tag-group">
                 <span class="tech-tag">WORDPRESS</span>
               </div>
@@ -197,7 +193,7 @@
             <div>
               <span class="card-index-sm accent-text">[06]</span>
               <h4>KES Mining</h4>
-              <p class="card-desc-sm">Safety Standards portfolio.</p>
+              <p class="card-desc-sm">Corporate company profile.</p>
               <div class="tag-group">
                 <span class="tech-tag">WORDPRESS</span>
               </div>
@@ -211,7 +207,7 @@
             <div>
               <span class="card-index-sm accent-text">[07]</span>
               <h4>Safa Victory Steel</h4>
-              <p class="card-desc-sm">Industrial Product Catalog.</p>
+              <p class="card-desc-sm">Corporate company profile.</p>
               <div class="tag-group">
                 <span class="tech-tag">WORDPRESS</span>
               </div>
